fixed alignment issue

--- a/src/components/body/body.css
+++ b/src/components/body/body.css
@@ -19,6 +19,8 @@
   color: grey;
 }
 
+
+
 @media only screen and (min-width: 300px) {
   #project_container {
     display: grid;
@@ -38,4 +40,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
   }
+}
+
+#project_img{
+  width: 180px;
 }
