--- a/src/components/personalia/hakan.css
+++ b/src/components/personalia/hakan.css
@@ -7,7 +7,7 @@
 }
 
 @media only screen and (max-width: 400px) {
-  .body {
+  #body {
     display: flex;
     flex-direction: column-reverse;
     margin: 10px auto 10px auto;
@@ -18,7 +18,7 @@
 }
 
 @media only screen and (min-width: 400px) {
-  .body {
+  #body {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
@@ -26,19 +26,3 @@
     width: 300px;
   }
 }
-
-
-
-#headshot{
-  /* display: inline; */
-}
-
-#headshot-beschrijving{
-  /* display: grid; */
-  /* direction: rtl; */
-}
-
-
-
-/* display: flex;
-  flex-direction: column-reverse; */
